--- a/styl/blocks/main-nav.styl
+++ b/styl/blocks/main-nav.styl
@@ -1,7 +1,8 @@
 .main-nav
 	font-family $main-font
 	
-	&--hp
+	&--hp,
+	&--services-slide
 		background-color transparent // scroll up - $main-color
 		.main-nav__list
 			background-color rgba($main-color, 0.97)
