--- a/styl/blocks/page-header.styl
+++ b/styl/blocks/page-header.styl
@@ -8,6 +8,12 @@
 		background-repeat no-repeat
 		background-size cover
 		
+	&--services-slide
+		height 350px
+		background-image url("../photos/landing-small.jpg")
+		background-repeat no-repeat
+		background-size cover
+		
 	&--project-on-game
 		min-height 17rem
 		background-repeat no-repeat
