--- a/styl/blocks/section.styl
+++ b/styl/blocks/section.styl
@@ -140,8 +140,7 @@
 			
 	.section__wrapper
 		&--margin-left-only
-			width auto
-			margin-left 5%
+			width 95%
 			margin-right 0
 
 	.section__title
@@ -191,6 +190,8 @@
 	.section__wrapper
 		&--tight
 			width 46rem
+		&--margin-left-only
+			width 75%
 
 	.section__btn
 		&--hidden-on-desktop
