--- a/services/outsource/b-index.jade
+++ b/services/outsource/b-index.jade
@@ -36,22 +36,22 @@ html(lang="en")
 						.workflow__inner.workflow__inner--right
 							h3.workflow__title You do
 							ul.workflow__list.workflow__list
-								li.workflow__item.workflow__item--color-1
+								li.workflow__item.workflow__item--color-1.workflow__item--tablet-color-1.workflow__item--items-opposite-after-2
 									span Provide technical requirements
-								li.workflow__item.workflow__item--color-2
+								li.workflow__item.workflow__item--color-2.workflow__item--tablet-color-4
 									span Approve estimate and project offer
 						.workflow__inner.workflow__inner--left
 							h3.workflow__title We do
 							ul.workflow__list.workflow__list
-								li.workflow__item.workflow__item--color-3
+								li.workflow__item.workflow__item--color-3.workflow__item--tablet-color-2.workflow__item--items-opposite-before-1
 									span Analyze, gather and offer the project estimate (timeline and budget)
-								li.workflow__item.workflow__item--color-4
+								li.workflow__item.workflow__item--color-4.workflow__item--tablet-color-3.workflow__item--items-opposite-after-1
 									span Submit project offer, pricing and schedule
-								li.workflow__item.workflow__item--color-5
+								li.workflow__item.workflow__item--color-5.workflow__item--tablet-color-5
 									span Set up a team and start a project
-								li.workflow__item.workflow__item--color-6
+								li.workflow__item.workflow__item--color-6.workflow__item--tablet-color-6
 									span Test and launch of a project
-								li.workflow__item.workflow__item--color-7
+								li.workflow__item.workflow__item--color-7.workflow__item--tablet-color-7
 									span In case needed, continuous project support
 
 				section.section
