--- a/services/outstaff/b-index.jade
+++ b/services/outstaff/b-index.jade
@@ -36,28 +36,28 @@ html(lang="en")
 						.workflow__inner.workflow__inner--right
 							h3.workflow__title You do
 							ul.workflow__list.workflow__list
-								li.workflow__item.workflow__item--color-1
+								li.workflow__item.workflow__item--color-1.workflow__item--tablet-color-1.workflow__item--items-opposite-after-4
 									span Provide a number and a skill set of required IT experts
-								li.workflow__item.workflow__item--color-2
+								li.workflow__item.workflow__item--color-2.workflow__item--tablet-color-6.workflow__item--items-opposite-after-1
 									span Evaluate and approve team
-								li.workflow__item.workflow__item--color-3
+								li.workflow__item.workflow__item--color-3.workflow__item--tablet-color-8
 									span Assign project tasks
-								li.workflow__item.workflow__item--color-4
+								li.workflow__item.workflow__item--color-4.workflow__item--tablet-hidden
 									span Renew the contract
 						.workflow__inner.workflow__inner--left
 							h3.workflow__title We do
 							ul.workflow__list.workflow__list
-								li.workflow__item.workflow__item--color-5
+								li.workflow__item.workflow__item--color-5.workflow__item--tablet-color-2.workflow__item--items-opposite-before-1
 									span Candidates market overview in 24 hours
-								li.workflow__item.workflow__item--color-6
+								li.workflow__item.workflow__item--color-6.workflow__item--tablet-color-3
 									span Conduct recruitment process to check candidates’ personal skills and language proficiency
-								li.workflow__item.workflow__item--color-7
+								li.workflow__item.workflow__item--color-7.workflow__item--tablet-color-4
 									span Conduct technical interviews
-								li.workflow__item.workflow__item--color-8
+								li.workflow__item.workflow__item--color-8.workflow__item--tablet-color-5.workflow__item--items-opposite-after-1
 									span Suggest candidates and schedule an interview with your team
-								li.workflow__item.workflow__item--color-9
+								li.workflow__item.workflow__item--color-9.workflow__item--tablet-color-7.workflow__item--items-opposite-after-1
 									span Provide workspace, facilities and technical equipment
-								li.workflow__item.workflow__item--color-10
+								li.workflow__item.workflow__item--color-10.workflow__item--tablet-color-9
 									span Take care of daily administrative things
 
 				section.section
