--- a/parts/b-footer.jade
+++ b/parts/b-footer.jade
@@ -26,6 +26,9 @@ mixin b-footer(modifier)
 					li.social__item
 						a(href="https://www.linkedin.com/company/18188825/" target="_blank")
 							img(src="/images/png/services/linkedin.png", alt="linkedin icon", width="35")
+					li.social__item
+						a(href="https://twitter.com/uneed_web" target="_blank")
+							img(src="/images/png/services/twitter.png", alt="twitter icon", width="35")
 			.page-footer__contact
 				address.page-footer__address Kiev, Ukraine, 02140, <br>Bazhana Ave 24/1
 				span.page-footer__phone
