--- a/parts/b-head.jade
+++ b/parts/b-head.jade
@@ -26,3 +26,5 @@ mixin head(title, keywords, description)
 		link(rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png")
 		link(rel="manifest" href="/manifest.json")
 		link(rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5")
+		script(src="/js/libs.min.js")
+		script(src="/js/animations.min.js")
