--- a/portfolio/b-index.jade
+++ b/portfolio/b-index.jade
@@ -33,7 +33,7 @@ html(lang="en")
 										span.project-item__type Web Development
 										h4.project-item__title Booking
 										p.project-item__descr Development of a web application for a travel company with a complete customer planning journey features.
-										a.project-item__link-btn.btn Details
+										a.project-item__link-btn.btn(href="/portfolio/booking/b-index.html") Details
 											include ../icons/arrow-go
 								li.project-item.project-item--entertaiment
 									.project-item__wrapper
@@ -47,35 +47,35 @@ html(lang="en")
 										span.project-item__type Mobile Development
 										h4.project-item__title Travel
 										p.project-item__descr Our own mobile application that keeps track of the places you visit and shows your exploration progress.
-										a.project-item__link-btn.btn Details
+										a.project-item__link-btn.btn(href="/portfolio/yow/b-index.html") Details
 											include ../icons/arrow-go
 								li.project-item.project-item--banking
 									.project-item__wrapper
 										span.project-item__type Web Development
 										h4.project-item__title Banking / Finance
 										p.project-item__descr Creation of a fee billing system for a major Hong Kong corporate bank. A software that calculates operational and managerial fees.
-										a.project-item__link-btn.btn Details
+										a.project-item__link-btn.btn(href="/portfolio/banking/b-index.html") Details
 											include ../icons/arrow-go
 								li.project-item.project-item--gambling
 									.project-item__wrapper
 										span.project-item__type Web Development
 										h4.project-item__title Gambling
 										p.project-item__descr Revamping of existing gambling web applications for a betting company with interactive components.
-										a.project-item__link-btn.btn Details
+										a.project-item__link-btn.btn(href="/portfolio/gambling/b-index.html") Details
 											include ../icons/arrow-go
 								li.project-item.project-item--social
 									.project-item__wrapper
 										span.project-item__type Web Development
 										h4.project-item__title Social Network
 										p.project-item__descr Creation of an engaging travel-oriented social network service with an embedded e-commerce platform.
-										a.project-item__link-btn.btn Details
+										a.project-item__link-btn.btn(href="/portfolio/social-travel/b-index.html") Details
 											include ../icons/arrow-go
 								li.project-item.project-item--data
 									.project-item__wrapper
 										span.project-item__type Web Development
 										h4.project-item__title Data Management
 										p.project-item__descr Localisation helper: a software that eases the translation of an online sports application into multiple languages.
-										a.project-item__link-btn.btn Details
+										a.project-item__link-btn.btn(href="/portfolio/localisation/b-index.html") Details
 											include ../icons/arrow-go
 			include ../parts/b-footer
 			+b-footer("portfolio")
