--- a/styl/blocks/page-footer.styl
+++ b/styl/blocks/page-footer.styl
@@ -9,6 +9,7 @@
 	&--services,
 	&--services-slide,
 	&--portfolio,
+	&--project,
 	&--contact-us
 		background-color $main-color
 	&--project-on-game
