--- a/styl/blocks/page-header.styl
+++ b/styl/blocks/page-header.styl
@@ -1,14 +1,15 @@
 .page-header
+	font-family $main-font
 	&--hp
 		box-sizing border-box
 		height 100%
 		min-height 500px
-		font-family $main-font
 		background-image url("../photos/landing-small.jpg")
 		background-repeat no-repeat
 		background-size cover
 		
-	&--services-slide
+	&--services-slide,
+	&--project
 		height 350px
 		background-image url("../photos/landing-small.jpg")
 		background-repeat no-repeat
