--- a/styl/blocks/project-switcher.styl
+++ b/styl/blocks/project-switcher.styl
@@ -14,7 +14,7 @@
 	transition all $transition-duration
 	svg
 		*
-			fill rgba(#333, 0.5)
+			fill #8492af
 			transition all $transition-duration
 	&--prev
 		.project-switcher__arrow-icon
@@ -25,10 +25,10 @@
 		.project-switcher__arrow-icon
 			margin-left 1rem
 	&:hover, &:active
-		color #333
+		color #292a2b
 		svg
 			*
-				fill #333
+				fill #292a2b
 			
 .project-switcher__arrow-icon
 	display flex
@@ -40,9 +40,4 @@
 		font-size 16px
 		letter-spacing 0.3px
 		text-decoration none
-		color rgba(#333, 0.5)
-		
-@media $desktop-widths
-
-	.project-switcher__wrapper
-		width 90%
+		color #8492af
