--- a/styl/index.styl
+++ b/styl/index.styl
@@ -28,5 +28,6 @@
 @import "blocks/contact-info"
 @import "blocks/social"
 @import "blocks/project-switcher"
+@import "blocks/approaches"
 @import "blocks/on-game-score-block"
 @import "blocks/project-features"
