--- a/styl/variables.styl
+++ b/styl/variables.styl
@@ -13,7 +13,7 @@ $main-color--on-game = #333
 $transition-duration = 0.3s
 
 $tablet-widths = "(min-width: 768px)"
-$tablet-landscape = "(min-width: 1024px)"
+$tablet-landscape-widths = "(min-width: 1024px)"
 $desktop-widths = "(min-width: 1200px)"
 $desktop-large-widths = "(min-width: 1400px)"
 $mobile-widths-only = "(max-width: 767px)"
