--- a/styl/blocks/main-nav.styl
+++ b/styl/blocks/main-nav.styl
@@ -2,6 +2,7 @@
 	font-family $main-font
 	
 	&--hp,
+	&--project,
 	&--services-slide
 		background-color transparent // scroll up - $main-color
 		.main-nav__list
